--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bottle"]
 	path = bottle
 	url = https://github.com/defnull/bottle.git
+[submodule "gaema"]
+	path = gaema
+	url = git://github.com/lann/gaema.git
