--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,12 @@
 [submodule "bottle"]
-	path = bottle
+	path = lib/bottle
 	url = https://github.com/defnull/bottle.git
 [submodule "gaema"]
-	path = gaema
+	path = lib/gaema
 	url = git://github.com/lann/python-gaema.git
 [submodule "google_appengine"]
-	path = google_appengine
+	path = lib/google_appengine
 	url = git://github.com/lann/python-google-appengine.git
 [submodule "beaker"]
-	path = beaker
+	path = lib/beaker
 	url = git://github.com/lann/python-beaker.git
